Adding Quix button and Info Box.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
     <script src="https://kit.fontawesome.com/a076d05399.script.js"></script>
 </head>
 <body>
-    
+    <!--To begain the Quiz Button-->
+    <div class="start_btn"><button>Begain Quiz</button></div>
+
+    <!--Info Box-->
+    <div class="info_box">
+        <div class="info_title">
+            <span>Some Rules of the Quiz</span>
+        </div>
+    </div>
+
 </body>
 </html>
