--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
     <!--Font Awesome Link for Icons-->
-    <script src="https://kit.fontawesome.com/a076d05399.script.js"></script>
+    
 </head>
 <body>
     <!--To begain the Quiz Button-->
@@ -17,6 +18,13 @@
     <div class="info_box">
         <div class="info_title">
             <span>Some Rules of the Quiz</span>
+        </div>
+        <div class="info_list">
+            <div class="info"> You will have only<span> 20 seconds</span> per each question. </div>
+            <div class="info"> Once you select your answer, you can't reselect. </div>
+            <div class="info"> You'll get points based on your correct answers</div>
+            <div class="info"> You may not exit from the Quiz while playing.</div>
+            <div class="info"> You may not select any option once time goes off.</div>
         </div>
     </div>
 
