Adding button class and style CSS google font.

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Coding Multiple Choice</title>
+      <!--Font Awesome Link for Icons-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
-    <!--Font Awesome Link for Icons-->
     
 </head>
 <body>
@@ -20,11 +20,15 @@
             <span>Some Rules of the Quiz</span>
         </div>
         <div class="info_list">
-            <div class="info"> You will have only<span> 20 seconds</span> per each question. </div>
-            <div class="info"> Once you select your answer, you can't reselect. </div>
-            <div class="info"> You'll get points based on your correct answers</div>
-            <div class="info"> You may not exit from the Quiz while playing.</div>
-            <div class="info"> You may not select any option once time goes off.</div>
+            <div class="info">1. You will have only<span> 20 seconds</span> per each question. </div>
+            <div class="info">2. Once you select your answer, you can't reselect. </div>
+            <div class="info">3. You'll get points based on your correct answers</div>
+            <div class="info">4. You may not exit from the Quiz while playing.</div>
+            <div class="info">5. You may not select any option once time goes off.</div>
+        </div>
+        <div class="buttons">
+            <button class="quit">Exit Quiz</buttons>
+            <button class="restart">Continue</buttons>
         </div>
     </div>
 
