Adding Quiz box HTML.

--- a/index.html
+++ b/index.html
@@ -32,5 +32,16 @@
         </div>
     </div>
 
+    <!--Quiz Box-->
+    <div class="quiz_box">
+        <header>
+            <div class="title">Cool Quiz Application</div>
+            <div class="timer"></div>
+                <div class="time_text">Time left</div>
+                <div class="timer_sec">20</div>
+            </div>
+        </header>
+        <section></section>
+    </div>
 </body>
 </html>
