Adding footer and quiz box.

--- a/index.html
+++ b/index.html
@@ -41,7 +41,34 @@
                 <div class="timer_sec">20</div>
             </div>
         </header>
-        <section></section>
+        <!--Question What does HTML stand for?-->
+        <section>
+            <div class="que_text">
+                <span>What does HTML stand for?</span>
+                <div class="option_list">
+                    <div class="option">
+                        <span>Hyper Text Preprocessor</span>
+                        <div class="icon tick"><i class="fas fa-check"></i></div>
+                    </div>
+                    <div class="option">
+                        <span>Hyper Text Markup Langugage</span>
+                        <div class="icon cross"><i class="fas fa-times"></i></div>
+                    </div>
+                    <div class="option">
+                        <span>Hyper Text Mutiple langugage</span>
+                    </div>
+                    <div class="option">
+                        <span>Hyper Tool Mutli Language</span>
+                </div>
+            </div>
+        </section>
+        <!--Quiz Box Footer-->
+        <footer>
+            <div class="total_que">
+                <span><p>2</p><p>of</p><p>5</p>Questions</span>
+            </div>
+            <button class="next_btn">Next Que</button>
+        </footer>
     </div>
 </body>
 </html>
