--- a/index.html
+++ b/index.html
@@ -43,24 +43,22 @@
         </header>
         <!--Question What does HTML stand for?-->
         <section>
-            <div class="que_text">
-                <span>What does HTML stand for?</span>
-                <div class="option_list">
-                    <div class="option">
-                        <span>Hyper Text Preprocessor</span>
-                        <div class="icon tick"><i class="fas fa-check"></i></div>
+            <div class="quiz_box">
+                <header>
+                    <div class="title">Awesome Quiz Application</div>
+                    <div class="timer">
+                        <div class="time_left_txt">Time Left</div>
+                        <div class="timer_sec">20</div>
                     </div>
-                    <div class="option">
-                        <span>Hyper Text Markup Langugage</span>
-                        <div class="icon cross"><i class="fas fa-times"></i></div>
+                    <div class="time_line"></div>
+                </header>
+                <section>
+                    <div class="que_text">
+                        <!-- Here I've inserted question from JavaScript -->
                     </div>
-                    <div class="option">
-                        <span>Hyper Text Mutiple langugage</span>
+                    <div class="option_list">
+                        <!-- Here I've inserted options from JavaScript -->
                     </div>
-                    <div class="option">
-                        <span>Hyper Tool Mutli Language</span>
-                </div>
-            </div>
         </section>
         <!--Quiz Box Footer-->
         <footer>
@@ -70,5 +68,11 @@
             <button class="next_btn">Next Que</button>
         </footer>
     </div>
+         <!-- Inside this JavaScript file I've inserted Questions and Options only -->
+    <script src="js/questions.js"></script>
+    
+        <!-- Inside this JavaScript file I've coded all Quiz Codes -->
+        <script src="js/script.js"></script>
+
 </body>
 </html>
