Adding question 5 to js.

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <div class="total_que">
                 <span><p>2</p><p>of</p><p>5</p>Questions</span>
             </div>
-            <button class="next_btn">Next Que</button>
+            <button class="next_btn">Next Question</button>
         </footer>
     </div>
          <!-- Inside this JavaScript file I've inserted Questions and Options only -->
