--- a/index.html
+++ b/index.html
@@ -63,16 +63,29 @@
         <!--Quiz Box Footer-->
         <footer>
             <div class="total_que">
-                <span><p>2</p><p>of</p><p>5</p>Questions</span>
+                <!-- Here I've inserted Question Count Number from JavaScript -->
             </div>
             <button class="next_btn">Next Question</button>
         </footer>
     </div>
-         <!-- Inside this JavaScript file I've inserted Questions and Options only -->
+    <!-- Result Box -->
+    <div class="result_box">
+        <div class="icon">
+            <i class="fas fa-crown"></i>
+        </div>
+        <div class="complete_text">You've completed the Quiz!</div>
+        <div class="score_text">
+            <!-- Here I've inserted Score Result from JavaScript -->
+        </div>
+        <div class="buttons">
+            <button class="restart">Replay Quiz</button>
+            <button class="quit">Quit Quiz</button>
+        </div>
+    </div>
+    <!-- Inside this JavaScript file I've inserted Questions and Options only -->
     <script src="js/questions.js"></script>
-    
-        <!-- Inside this JavaScript file I've coded all Quiz Codes -->
-        <script src="js/script.js"></script>
-
+    <!-- Inside this JavaScript file I've coded all Quiz Codes -->
+    <script src="js/script.js"></script>
 </body>
+</html>
 </html>
