--- a/index.html
+++ b/index.html
@@ -82,10 +82,12 @@
             <button class="quit">Quit Quiz</button>
         </div>
     </div>
+    
     <!-- Inside this JavaScript file I've inserted Questions and Options only -->
-    <script src="js/questions.js"></script>
+    <script src="questions.js"></script>
+    
     <!-- Inside this JavaScript file I've coded all Quiz Codes -->
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
 </html>
