--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- Created By CodingNepal - www.codingnepalweb.com -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -30,14 +29,17 @@
     </div>
     <!-- Quiz Box -->
     <div class="quiz_box">
+        <!--Header Start-->
         <header>
-            <div class="title">Awesome Quiz Application</div>
+            <div class="title">Cool Quiz Application</div>
             <div class="timer">
                 <div class="time_left_txt">Time Left</div>
                 <div class="timer_sec">15</div>
             </div>
             <div class="time_line"></div>
         </header>
+        <!--Header end-->
+        <!--Section start-->
         <section>
             <div class="que_text">
                 <!-- Here I've inserted question from JavaScript -->
@@ -46,6 +48,7 @@
                 <!-- Here I've inserted options from JavaScript -->
             </div>
         </section>
+        <!--Section end-->
         <!-- footer of Quiz Box -->
         <footer>
             <div class="total_que">
@@ -53,6 +56,7 @@
             </div>
             <button class="next_btn">Next Que</button>
         </footer>
+        <!--Footer of Quiz end-->
     </div>
     <!-- Result Box -->
     <div class="result_box">
