--- a/index.html
+++ b/index.html
@@ -72,6 +72,17 @@
             <button class="quit">Quit Quiz</button>
         </div>
     </div>
+     <!--Initials and highscore-->
+     <div id="finalResult">
+        <p>Your score:</p>
+        <input type="text" id="initials" />
+        <button id="submit">Click to Submit</button>
+      </div>
+  
+        <ul id="initialsList">
+          <li></li>
+        </ul>
+      </div>
     <!-- Inside this JavaScript file I've inserted Questions and Options only -->
     <script src="questions.js"></script>
     <!-- Inside this JavaScript file I've coded all Quiz Codes -->
