--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="quiz_box">
         <!--Header Start-->
         <header>
-            <div class="title">Cool Quiz Application</div>
+            <div class="title">Coding Quiz Application</div>
             <div class="timer">
                 <div class="time_left_txt">Time Left</div>
                 <div class="timer_sec">15</div>
